--- a/centershadenav.css
+++ b/centershadenav.css
@@ -1,4 +1,5 @@
-/* Centershadenav 0.1.0 ( https://github.com/tightcode/centershadenav ) */
+/* Centershadenav 0.1.1 ( https://github.com/tightcode/centershadenav ) */
+/* changed breakpoint from md to lg */
 
 
 
@@ -29,7 +30,7 @@
 .navbar {
   box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.5);
 }
-@media (max-width: 767.98px) {
+@media (max-width: 991.98px) {
   .dropdown {
     z-index: 0;
 		position:relative;
@@ -58,7 +59,7 @@
     z-index: -1;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
 	.sn-static {
 		position: relative;
 		z-index: 0;
@@ -87,7 +88,7 @@
 
 
 /* Slidenav 4.0.0-alpha.1 ( https://github.com/tightcode/slidenav ) */
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .dropdown>div {
     position: absolute;
     clip: rect(0.5rem, 9999px, 9999px, -9999px);
