--- a/centershadenav.css
+++ b/centershadenav.css
@@ -1,4 +1,9 @@
-/* Centershadenav 0.1.1 ( https://github.com/tightcode/centershadenav ) */
+/* Centershadenav 0.1.2 ( https://github.com/tightcode/centershadenav ) */
+/* changed breakpoint from md to lg */
+
+
+
+/* Centerslidenav 0.1.4 ( https://github.com/tightcode/centerslidenav ) */
 /* changed breakpoint from md to lg */
 
 
@@ -87,7 +92,7 @@
 
 
 
-/* Slidenav 4.0.0-alpha.1 ( https://github.com/tightcode/slidenav ) */
+/* Slidenav 4.0.0-alpha.5 ( https://github.com/tightcode/slidenav ) */
 @media (min-width: 992px) {
   .dropdown>div {
     position: absolute;
